# rasoi

./: README.md
backend/: .env  .env.sample  .gitignore  README.md  Script-2.sql  cmd.bash  crud_schemas.py  db.py  db_models.py  image_search.py  ingredients.py  ingredients_nlg.py  init_db.py  main.py  pyproject.toml  requirements.txt  requirements_win.txt
backend/app/: auth.py  crud_schemas.py  db.py  db_models.py  dependencies.py  extra_recipes.py  image_search.py  ingredients_food_com.py  ingredients_nlg.py  init_db.py  main.py
backend/app/routers/: auth.py  recipes.py  recommendations.py  search.py
backend/dataset/: .gitignore  extra_recipes.json  extra_recipes_og.csv
backend/food_com/: Script-2.sql  crud_schemas.py
backend/old/: crud_schemas_nlg.py  db_models.old.py  db_models_nlg.py  init_db_multi.py  init_db_nlg.py  init_db_quick.py  init_db_simple.py
backend/old/food_com/: db_models.py  init_db.py  main.py
docs/: .gitignore  ddl.sql  openapi.json  openapi.md  progress report 1.md
frontend/: App.jsx  app.json  package-lock.json  package.json
frontend/app/: _layout.jsx  about.jsx  search.jsx
ml/: .gitignore  README.md  mdl.txt  requirements.txt
ml/food_com/: create_image_list.py  expt.py  expt_batch.py  expt_batch_cp.py  expt_pg.py  load.py  pg.txt  requirements.txt
rasoi-aws-lambda/: .gitignore  README.md  go.mod  go.sum  main.go
web/: .env  .env.sample  .gitignore  next.config.js  package-lock.json  package.json  start.bash  tailwind.config.js
web/app/: globals.css  layout.jsx  not-found.jsx  page.jsx
web/components/: Footer.jsx  (+5 more)
(+14 files in other folders)
